Prevent additional scrollbar on  small screens

--- a/src/frontend/ts/views/site.css
+++ b/src/frontend/ts/views/site.css
@@ -9,7 +9,7 @@
 	
 	>.page {
 		flex-grow: 1;
-		padding: 10px;
+		padding: 10px 10px 0 10px;
 		overflow: auto;
 	}
 }
